--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,18 +1,16 @@
-
-    
-    <main>
-      <h1>Browser</h1>
-      <form action="/" method="GET">
-        <input type="text" class="search" name="search" placeholder="Search...">
-        <input type="number" name="from" class="difficulty" placeholder="Difficulty from...">
+<main>
+    <h1>Browser</h1>
+    <form action="/" method="POST">
+        <input type="text" class="search" name="search" value="{{search}}" placeholder="Search...">
+        <input type="number" name="from" class="difficulty" value="{{from}}" placeholder="Difficulty from...">
         <span>-</span>
-        <input type="number" name="to" class="difficulty" placeholder="Difficulty to...">
+        <input type="number" name="to" class="difficulty" value="{{to}}" placeholder="Difficulty to...">
         <input type="submit" value="search">
-      </form>
-      {{#each cubes}}
-      {{>cube}}
-      {{else}}
-      <p>There are no cubes yet!</p>
-      {{/each}}
-    </main>
-  
+    </form>
+
+    {{#each cubes}}
+        {{>cube}}
+    {{else}}
+    <p>There are no cubes yet!</p>
+    {{/each}}
+</main>
